force-app/main/default/objects/Sank_delete__c/Sank_delete__c.object-meta.xml
<CustomObject>
    <label>Sank delete</label>
    <nameField>
        <label>Sank_delete Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sank delete</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>