force-app/main/default/objects/Sank_delete__c/fields/Numbers__c.field-meta.xml
<CustomField>
    <fullName>Numbers__c</fullName>
    <label>Numbers</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>show__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>