force-app/main/default/objects/Sank_delete__c/fields/show__c.field-meta.xml
<CustomField>
    <fullName>show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>show</label>
    <type>Checkbox</type>
</CustomField>