force-app/main/default/objects/Sank_delete__c/fields/today__c.field-meta.xml
<CustomField>
    <fullName>today__c</fullName>
    <label>today</label>
    <type>Date</type>
</CustomField>